2008-10-23  Martin Rudalics  <rudalics@gmx.at>

	* buffer.c (Fget_buffer_create): Rename arg to buffer_or_name.
	Reword doc-string.
	(Fbury_buffer): In doc-string say what happens to the buffer's
	window.

2008-10-23  Juanma Barranquero  <lekktu@gmail.com>

	* character.c (syms_of_character) <script-representative-chars>:
	<unicode-category-table>: Doc fixes.

2008-10-23  Noah Friedman  <friedman@splode.com>

	* coding.c (make_conversion_work_buffer): Check that
	Vcode_conversion_reused_workbuf is a live buffer, otherwise call
	Fget_buffer_create.

2008-10-23  Kenichi Handa  <handa@m17n.org>

	* font.c (font_add_log): Check the values of extra properties.

2008-10-22  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fwindow_dedicated_p, Fset_window_dedicated_p):
	Reword doc-string.
	(Fset_window_parameter): Use NILP.
	(Fscroll_up, Fscroll_down, Fminibuffer_selected_window)
	(Frecenter): Use "selected" instead of "current" window in
	doc-strings.

2008-10-22  Juanma Barranquero  <lekktu@gmail.com>

	* xdisp.c (next_element_from_buffer): Remove bogus xassert condition.

2008-10-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (ns_appkit_version): New function.
	(x-server-version): Use it.
	(syms_of_nsfns): Define ns-version-string here, not nsterm.m.
	(x-server-vendor): Don't check_ns().

	* nsterm.m (syms_of_nsterm): Drop ns-version-string.

2008-10-22  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (unwind_create_frame) [!GLYPH_DEBUG]: Fix xassert.
	Copied from 2005-02-03 change to xfns.c by Kim F. Storm.

2008-10-22  Kenichi Handa  <handa@m17n.org>

	* syntax.c (scan_words): Call word_boundary_p instead of comparing
	scripts.

	* category.c (word_boundary_p): Check scripts instead of charset.
	Handle nil value in word-separating-categories and
	word-combining-categories.
	(syms_of_category): Fix docstrings of word-separating-categories
	and word-combining-categories.

2008-10-21  Eli Zaretskii  <eliz@gnu.org>
